[ UNSTABLE ] Updates EScheme to use Java 21 (LTS) instead of 11/17!